--- a/Training4/WorkSpace/RESTService_Test/pom.xml
+++ b/Training4/WorkSpace/RESTService_Test/pom.xml
@@ -55,6 +55,21 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<profiles>
+		<profile>
+			<id>sonar</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<!-- Optional URL to server. Default value is http://localhost:9000 -->
+				<sonar.host.url>
+					http://localhost:8080
+				</sonar.host.url>
+			</properties>
+		</profile>
+	</profiles>
 
 
 </project>
