--- a/Training4/WorkSpace/RESTService_Test/pom.xml
+++ b/Training4/WorkSpace/RESTService_Test/pom.xml
@@ -22,6 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<!--
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar.jacoco.version>0.8.2</sonar.jacoco.version>
 		<sonar.exclusions>
@@ -30,7 +31,7 @@
 			src/main/java/com/sever/demo/model/ProductModel.java,
 			src/main/java/com/sever/demo/repository/ProductRepository.java
 		</sonar.exclusions>
-		
+		-->
 	</properties>
 
 	<dependencies>
@@ -77,7 +78,7 @@
             <scope>test</scope>
 		</dependency>
 	</dependencies>
-
+	<!--
 	<build>
 		<plugins>
 			<plugin>
@@ -111,7 +112,7 @@
 			</plugin>
 			
 		</plugins>
-	</build>
+	</build>-->
 	
 	<!-- <profiles>
 		<profile>
