--- a/Training4/WorkSpace/RESTService_Test/pom.xml
+++ b/Training4/WorkSpace/RESTService_Test/pom.xml
@@ -77,6 +77,21 @@
             <version>1.2.5</version>
             <scope>test</scope>
 		</dependency>
+		
+		<dependency>
+	        <groupId>ch.qos.logback</groupId>
+	        <artifactId>logback-classic</artifactId>
+	    </dependency>
+	
+	    <dependency>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>jul-to-slf4j</artifactId>
+	    </dependency>
+	
+	    <dependency>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>log4j-over-slf4j</artifactId>
+	    </dependency>
 	</dependencies>
 	<!--
 	<build>
