--- a/Training4/WorkSpace/RESTService_Test/src/main/resources/application.properties
+++ b/Training4/WorkSpace/RESTService_Test/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+# Logs
+logging.level.root=info
+logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.
